list pages template

--- a/templates/layouts/main_layout/includes/scripts.html
+++ b/templates/layouts/main_layout/includes/scripts.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+<!-- jquery-->
 <script src="{% static 'general/base/js/jquery-2.2.4.min.js' %}"></script>
 <!-- Plugins js -->
 <script src="{% static 'general/base/js/plugins.js' %}"></script>
@@ -15,18 +16,3 @@
 <script src="{% static 'general/base/js/waypoints.min.js' %}"></script>
 <!-- Parallaxie Js -->
 <script src="{% static 'general/base/js/parallaxie.js' %}"></script>
-<!-- Nivo slider js -->
-<script src="{% static 'general/base/vendor/slider/js/jquery.nivo.slider.js' %}"></script>
-<script src="{% static 'general/base/vendor/slider/home.js' %}"></script>
-<!-- Owl Carousel Js -->
-<script src="{% static 'general/base/vendor/OwlCarousel/owl.carousel.min.js' %}"></script>
-<!-- Meanmenu Js -->
-<script src="{% static 'general/base/js/jquery.meanmenu.min.js' %}"></script>
-<!-- Magnific Popup Js -->
-<script src="{% static 'general/base/js/jquery.magnific-popup.min.js' %}"></script>
-<!-- Isotope Js -->
-<script src="{% static 'general/base/js/isotope.pkgd.min.js' %}"></script>
-<!-- Smoothscroll Js -->
-<script src="{% static 'general/base/js/smoothscroll.min.js' %}"></script>
-<!-- Custom Js -->
-<script src="{% static 'general/base/js/main.js' %}"></script>
