--- a/templates/layouts/main_layout/includes/links.html
+++ b/templates/layouts/main_layout/includes/links.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+<!-- Favicon -->
 <link rel="shortcut icon" type="image/x-icon" href="{% static 'general/base/img/favicon.png' %}">
 <!-- Normalize CSS -->
 <link rel="stylesheet" href="{% static 'general/base/css/normalize.css' %}">
@@ -16,18 +17,3 @@
 <link rel="stylesheet" href="{% static 'general/base/css/font/flaticon.css' %}">
 <!-- Meanmenu CSS -->
 <link rel="stylesheet" href="{% static 'general/base/css/meanmenu.min.css' %}">
-<!-- Magnific Popup CSS -->
-<link rel="stylesheet" href="{% static 'general/base/css/magnific-popup.css' %}">
-<!-- Owl Carousel CSS -->
-<link rel="stylesheet" href="{% static 'general/base/vendor/OwlCarousel/owl.carousel.min.css' %}">
-<link rel="stylesheet" href="{% static 'general/base/vendor/OwlCarousel/owl.theme.default.min.css' %}">
-<!-- Nivo slider CSS -->
-<link rel="stylesheet" href="{% static 'general/base/vendor/slider/css/nivo-slider.css' %}"/>
-<!-- Elements CSS -->
-<link rel="stylesheet" href="{% static 'general/base/css/elements.css' %}">
-<!-- Style CSS -->
-<link rel="stylesheet" href="{% static 'general/base/style.css' %}">
-<!-- Custom CSS -->
-<link rel="stylesheet" href="{% static 'layouts/main_layout/css/custom_main_layout.css' %}">
-<!-- Modernizr Js -->
-<script src="{% static 'general/base/js/modernizr-3.5.0.min.js' %}"></script>
