--- a/templates/layouts/main_layout/main_layout.html
+++ b/templates/layouts/main_layout/main_layout.html
@@ -28,10 +28,12 @@
     {% include 'layouts/main_layout/includes/footer.html' %}
 
     {% include 'layouts/main_layout/includes/scripts.html' %}
+    <!-- Custom Js -->
 
     {% block scripts %}
     {% endblock scripts %}
 
+    <script src="{% static 'general/base/js/main.js' %}"></script>
     
 </body>
 </html>
