--- a/templates/pages/home/home.html
+++ b/templates/pages/home/home.html
@@ -11,7 +11,7 @@
     {% include 'pages/home/includes/departaments_area.html' %}
     {% include 'pages/home/includes/doctors_area.html' %}
     {% include 'pages/home/includes/blog_area.html' %}
-    {% include 'pages/home/includes/featured_area.html' %}
+    {% comment %} {% include 'pages/home/includes/featured_area.html' %} {% endcomment %}
 {% endblock body %}
 
 {% block scripts %}
