--- a/departament/templates/departament/departament_list/includes/departaments_area.html
+++ b/departament/templates/departament/departament_list/includes/departaments_area.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Department Start Here -->
 <section class="departments-wrap-layout5 bg-light-accent100">
     <div class="container">
@@ -15,7 +17,8 @@
             <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                 <div class="departments-box-layout4">
                     <div class="box-content">
-                        <i class="flaticon-pills"></i>
+                        {% comment %} <i class="flaticon-pills"></i> {% endcomment %}
+                        <img src="{% static 'pages/departaments/heart.png' %}" class="mb-3 mt-4" alt="" width=70 height=70>
                         <h3 class="item-title"><a href="single-departments.html">Medicine</a></h3>
                         <p>There are many variations of of Lorem Ipsum available, but the majority have
                             suffered..</p>
