--- a/templates/layouts/main_layout/includes/footer.html
+++ b/templates/layouts/main_layout/includes/footer.html
@@ -79,41 +79,11 @@
     </section>
     <section class="footer-center-wrap">
         <div class="container">
-            <div class="row no-gutters">
-                <div class="col-lg-4 col-12">
-                    <div class="footer-social">
-                        <ul>
-                            <li>Follow Us:</li>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                            <li><a href="#"><i class="fab fa-skype"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-8 col-12">
-                    <div class="row">
-                        <div class="col-md-6 col-12">
-                            <div class="newsletter-title">
-                                <h4 class="item-title">Stay informed and healthy</h4>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-12">
-                            <div class="newsletter-form">
-                                <div class="input-group stylish-input-group">
-                                    <input type="text" class="form-control" placeholder="Enter your e-mail">
-                                    <span class="input-group-addon">
-                                        <button type="submit">
-                                            <span aria-hidden="true">SIGN UP!</span>
-                                        </button>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <ul class="row no-gutters justify-content-center text-center display-3">
+                <li class="col-4 col-md-2"><a href="#" class="text-white"><i class="fab fa-facebook-square"></i></a></li>
+                <li class="col-4 col-md-2"><a href="#" class="text-white"><i class="fab fa-instagram"></i></a></li>
+                <li class="col-4 col-md-2"><a href="#" class="text-white"><i class="fab fa-youtube"></i></a></li>
+            </ul>
         </div>
     </section>
     <section class="footer-bottom-wrap">
